--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,11 @@
 #headerContainer{
     background-color: #bf8596;
-    height: 20vh;
+    height: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
 }
 #headerHeader{
     color: #F3E7DA;
@@ -13,6 +14,10 @@
     color: #F3DAC6;
     display: flex;
     align-self: flex-end;
+}
+
+.userIcons{
+    padding: 5px;
 }
 
 /*headerContainer
