--- a/src/Login.css
+++ b/src/Login.css
@@ -29,7 +29,7 @@ h1 {
     padding: 4rem 2rem;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .form{
