--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -1,29 +1,38 @@
+/* 990 från två kort t ett - fortf inte centrerat */
+/*  */
+
 #systembolaget{
-    align-items: center;
+    width: fit-content
 }
 #wineBox{
+    align-items: center;
     border: 1px solid rgb(165, 135, 135);
     border-radius: 20px;
-    width: 360px;
-    height: 300px;
-    /* padding: 20px; */
+    width: 350px;
+    height: 240px;
+    padding: 0px;
     margin: 30px;
     font-size: 12px;
     position: relative;
-    /* align-items: center; */
-}
-.row{
-    /* width: fit-content; */
+    box-shadow: 1px 5px #d2cfcf;
 }
 #h3{
-    font-size: 22px;
+    font-size: 16px;
+    height: 40px;
 }
 #winePic{
     border-radius: 20px;
-    height: 300px;
-    width: 110px;
-    padding-left: 0;
-    position: absolute;
+    height: 240px;
+    width: 95px;
+    padding-left: -20px;
+    border: 1px solid rgb(165, 135, 135);
+    float: left;
+}
+#wineFacts{
+    float: right;
+    width: 200px;
+   margin: 12px;
+   white-space: pre-line;
 }
 #cartKnapp{
     border: 1px solid blanchedalmond;
@@ -32,7 +41,4 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-}
-.bildTest{
-    background-image: url("../../media/skreen.png");
 }
