--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -38,6 +38,7 @@ body{
     width: 95px;
     padding-left: -20px;
     border: 1px solid rgb(165, 135, 135);
+}
 #wineFacts{
     width: 200px;
     margin: 12px;
