--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -1,17 +1,40 @@
 /* 990 går från två t ett kort - fortf inte centrerat */
 /* Add medie querys */
-body{
+
+/* 767 centrera vinkorten */
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  }
+#App{
+    /* align-items: center; */
     background-color: #f9f4ee;
-    align-items: center;
+    height: fit-content;
+}
+/* h2{
+    color: #bf8596;
+} */
+#navbar{ 
+    padding: 40px;
+    margin: 15px; 
+}
+#navLink{
+    color: #bf8596; 
+    background-color: #f9f4ee; 
+    margin: 2px;
+    border-bottom:  #f9f4ee;;
+
 }
 #systembolaget{
-    width: 1500px;
+    width: 100%;
     align-items: center;
     /* margin: auto; */
     position: relative;
     margin-bottom: 80px;
 }
-#testTest{
+#testi{
     width: fit-content;
 }
 #wineBox{
@@ -34,7 +57,6 @@ body{
     border-radius: 20px;
     height: 238px;
     width: 95px;
-    /* padding-left: -20px; */
     border: 1px solid #f3dac6;
     float: left;
 }
@@ -58,5 +80,4 @@ body{
     bottom: 15px;
     right: 15px;
     border-radius: 4px;
-
 }
