--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -64,7 +64,8 @@
 }
 #wineFacts{
     width: 200px;
-    margin: 12px;
+    margin-left: 12px;
+    margin-bottom: 12px;
     white-space: pre-line;
     display: flex;
     flex-direction: column;
@@ -72,7 +73,7 @@
 
 #cartKnapp{
     border: 1px solid #f3dac6;
-    padding: 6px 15px;
+    padding: 4px 9px;
     font-size: 10px;
     /* bottom: 10px;
     right: 10px; */
