names on icon and placement on "hello"

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,7 @@
-
-
-/*headerContainer
-
-rosa: #bf8596
-rosa/vit: #EDBFC0
-beige/vit: #F3DAC6
-vit: #F3E7DA
-grå: #BAABB4 
-
-*/
+.upper-nav{
+    background-color: #bf8596;
+    text-align: center;
+    padding-top: 25px;
+    color: #F3DAC6;
+    font-size: bold;
+}
