--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,3 +18,9 @@
 .navbar-font{
     font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (max-width: 600px) {
+    p {
+      display: none;
+    }
+  }
