--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -29,7 +29,9 @@ h1 {
 
 .div-form {
     display: flex;
-    /* padding: 4rem 2rem; */
+    flex-direction: column;
+
+    /* margin: 4rem 2rem; */
     justify-content: center;
     align-items: center;
     /* height: 100vh; */
@@ -118,17 +120,19 @@ h1 {
 .form_input:focus{
     border: 1.5px solid var(--border-color);
 }
-.reg_button{
-    display: block;
-    padding: 2px;
-    outline: none;
-    border: 1px solid (--border-color);
+#navLink{
+    border: 1px solid var(--border-color);
     width: fit-content;
-    background-color: var(--first-color);
-    right: 0;
-    font-size: var(--normal-font-size);
     border-radius: .5rem;
+    font-size: var(--normal-font-size);
     cursor: pointer;
     transition: .3s;
+    padding: 0.5rem;
     text-align: center;
+    display: block;
+    margin-top: 5em;
+    transition: .3s; 
+}
+#navLink:hover{
+    background-color:var(--input-color);
 }
