--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -1,21 +1,9 @@
-/* 990 går från två t ett kort - fortf inte centrerat */
-/* Add medie querys */
 
-/* 767 centrera vinkorten */
-/* For mobile phones: */
-/* @media only screen and (max-width: 768px) {
-    [class*="col-"] {
-      width: 100%;
-    }
-  } */
 #App{
-    /* align-items: center; */
     background-color: #f9f4ee;
     height: fit-content;
 }
-/* h2{
-    color: #bf8596;
-} */
+
 #navbar{ 
     padding: 10px;
     margin: 5px; 
@@ -31,13 +19,11 @@
 #systembolaget{
     width: 100%;
     align-items: center;
-    /* margin: auto; */
     position: relative;
     margin-bottom: 100px;
     
 }
 #wineBox{
-    /* align-items: center; */
     border: 3px solid #f3dac6;
     border-radius: 20px;
     width: 350px;
@@ -58,11 +44,10 @@
 #winePic{
     border-radius: 20px;
     height: 238px;
-    width: 95px;
+    width: auto;
     border: 1px solid #f3dac6;
     float: left;
     padding-left: -20px;
-    /* border: 1px solid rgb(165, 135, 135); */
 }
 #wineFacts{
     width: 200px;
@@ -71,6 +56,7 @@
     display: flex;
     flex-direction: column;
 }
+
 #cartButtons{
     position: absolute;
     bottom: 14px;
