uwishlist icon working

--- a/src/components/wineCards/wineBottles.css
+++ b/src/components/wineCards/wineBottles.css
@@ -97,6 +97,9 @@
     border-radius: 4px;
     width: 90px;
 }
+.fav {
+    color: red !important;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
