template and design for responsive cart.Remaining minor bug fixes

--- a/src/components/cart/Cart.style.css
+++ b/src/components/cart/Cart.style.css
@@ -48,53 +48,42 @@ img{
         margin-left: 10px;
         background-color: #EA4C89
 }
-.button-3 {
-    appearance: none;
-    background-color: #2ea44f;
-    border: 1px solid rgba(27, 31, 35, .15);
-    border-radius: 6px;
-    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
-    box-sizing: border-box;
-    color: #fff;
+.text-body {
     cursor: pointer;
-    display: inline-block;
-    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 20px;
-    padding: 6px 16px;
-    position: relative;
-    text-align: center;
+}
+.sub-total {
+    margin-top: 70px;
+}
+.sub-total > span{
+    color: green;
+    margin-left: 10px;
+
+}
+.cart-btn{
+    margin-left:40px;
     text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: middle;
-    white-space: nowrap;
+    color:black
 }
-
-.button-3:focus:not(:focus-visible):not(.focus-visible) {
-    box-shadow: none;
-    outline: none;
+.cart-btn2 {
+    text-decoration: none;
+    color:black;
 }
-
-.button-3:hover {
-    background-color: #2c974b;
+.price-tag {
+    margin-top: 75px;
+    font-size:medium;
+    margin-left: 20px;
 }
-
-.button-3:focus {
-    box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
-    outline: none;
+.trash-btn2 {
+    margin-top: 72px;
+    color:grey;
+    margin-right:80px;
 }
-
-.button-3:disabled {
-    background-color: #94d3a2;
-    border-color: rgba(27, 31, 35, .1);
-    color: rgba(255, 255, 255, .8);
-    cursor: default;
+.trash-icon {
+    margin-left: 80px;
 }
-
-.button-3:active {
-    background-color: #298e46;
-    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+.cart-price {
+    padding-right: 50px;
+}
+.checkout-btn {
+    font-size: medium;
 }
