--- a/src/about.css
+++ b/src/about.css
@@ -3,3 +3,24 @@
 #about {
     font-family: 'Poppins', sans-serif;
 }
+.justify-content-around{
+    flex-direction: row;
+    /* width: 200px; */
+} 
+Container{
+    padding: 60px;
+    /* width: 80%; */
+}
+@media screen and (max-width:700px) {
+    #about {
+        padding: 6px;
+        flex-direction: column;
+        /* width: 80%; */
+        margin: 2px;
+        
+    }
+    div.card {
+        max-width: 100%;
+        align-self: center;
+    }
+  }
