Parprogrammering med Axel. Cart functions finished. Redux working

--- a/src/components/cart/Cart.style.css
+++ b/src/components/cart/Cart.style.css
@@ -84,6 +84,9 @@ img{
 .cart-price {
     padding-right: 50px;
 }
+.button-container {
+    margin-left: 52%;
+}
 .checkout-btn {
     font-size: medium;
 }
